/// This file contains service for the Node RPC Server
syntax = "proto3";

// Package Highway is used for defining a Highway node and its accessible API Endpoints
package sonrio.highway.v1;

option go_package = "github.com/sonr-io/sonr/highway/v1";

// MsgListenChannel represents a request payload to subscribe to a channel
message MsgListenChannel {
  // DID of the channel to listen to
  string did = 1;
}

// MsgUploadBlob represents a request payload to upload a blob
message MsgUploadBlob {
  // Label is the label of the blob
  string label = 1;

  // Path is the path of the blob
  string path = 2;
}

// MsgDownloadBlob represents a request payload to download a blob
message MsgDownloadBlob {
  // CID (Content Identifier) of the blob to download
  string cid = 1;

  // Out Path is the download path of the blob
  string out_path = 2;
}

// MsgRemoveBlob represents a request payload to delete a blob
message MsgRemoveBlob {
  // CID (Content Identifier) of the blob to delete
  string cid = 1;
}
